# pdm

./: .gitignore  CMakeLists.txt  Kbuild  Makefile  README.md  config.mk  toolchain.cmake
app/: Makefile  pdm_test.c
app/pdm_test/: CMakeLists.txt
app/test/: CMakeLists.txt
app/test/src/: pdm_switch_test.c
app/websocket/: CMakeLists.txt
app/websocket_server/: CMakeLists.txt  websocket_server.c
driver/: CMakeLists.txt  Makefile
driver/include/core/: pdm_client.h
driver/include/osa/: osa_log.h
driver/include/private/: pdm_device_priv.h
driver/include/uapi/: pdm_switch_ioctl.h
driver/src/device/: pdm_device_spi.c
driver/src/dimmer/: pdm_dimmer_pwm.c
driver/src/nvmem/: pdm_nvmem_priv.h  pdm_nvmem_spi.c
driver/src/sensor/: pdm_sensor.c  pdm_sensor_priv.h
driver/src/switch/: pdm_switch_gpio.c
drivers/: Kbuild  Makefile
drivers/src/core/: pdm_component.c  pdm_core.c  pdm_device.c
drv/: CMakeLists.txt
drv/include/core/: pdm_adapter.h  pdm_component.h
drv/include/private/: pdm_adapter_priv.h
drv/include/uapi/: pdm_nvmem_ioctl.h
drv/src/nvmem/: pdm_nvmem.c
include/: osa_log.h  pdm.h  pdm_cpld.h  pdm_device.h  pdm_driver.h  pdm_driver_manager.h  pdm_lcd.h  pdm_led.h  pdm_master.h  pdm_osa.h  pdm_subdriver.h  pdm_submodule.h  pdm_template.h
include/core/: pdm.h  pdm_adapter.h  pdm_bus.h  pdm_client.h  pdm_component.h  pdm_device.h  pdm_device_drivers.h  pdm_driver_manager.h  pdm_master.h  pdm_master_drivers.h
include/driver/: pdm_adapter_drivers.h  pdm_device_drivers.h
include/master/: pdm_master_led.h  pdm_master_sensor.h  pdm_master_template.h  pdm_template.h
include/osa/: osa_log.h
include/private/: pdm_adapter_priv.h  pdm_device_priv.h
include/uapi/: pdm_dimmer_ioctl.h  pdm_eeprom_ioctl.h  pdm_led_ioctl.h  pdm_master_led_ioctl.h  pdm_master_sensor_ioctl.h  pdm_master_template_ioctl.h  pdm_nvmem_ioctl.h  pdm_sensor_ioctl.h  pdm_template_ioctl.h
lib/: CMakeLists.txt  Makefile
lib/src/: lib_pdm_switch.c
libs/: Makefile
libs/src/: libpdm_dimmer.c
modules/: Kbuild  Makefile
modules/src/core/: pdm_client.c
modules/src/dimmer/: pdm_dimmer.c
modules/src/sensor/: pdm_sensor_icm20608.h
modules/src/switch/: pdm_switch.c
src/: pdm_submodule.c
src/core/: pdm_adapter.c  pdm_bus.c  pdm_client.c  pdm_component.c  pdm_core.c  pdm_device.c  pdm_device_drivers.c  pdm_driver.c  pdm_driver_manager.c  pdm_master.c  pdm_master_drivers.c  pdm_subdriver.c  pdm_submodule.c
src/cpld/: pdm_cpld_i2c_driver.c  pdm_cpld_master.c
src/device/: pdm_device_i2c.c  pdm_device_platform.c  pdm_device_spi.c
src/dimmer/: pdm_dimmer.c  pdm_dimmer_priv.h  pdm_dimmer_pwm.c
src/driver/: pdm_adapter_drivers.c  pdm_device_drivers.c
src/drivers/: pdm_adapter_drivers.c  pdm_device_drivers.c
src/eeprom/: pdm_eeprom.c  pdm_eeprom_priv.h  pdm_eeprom_spi.c
src/lcd/: pdm_lcd_i2c_driver.c  pdm_lcd_master.c
src/led/: pdm_led.c  pdm_led_gpio.c  pdm_led_gpio_driver.c  pdm_led_master.c  pdm_led_priv.h  pdm_led_pwm.c
src/master/led/: pdm_led.c  pdm_led_gpio.c  pdm_led_priv.h  pdm_led_pwm.c  pdm_master_led.c  pdm_master_led_gpio.c  pdm_master_led_priv.h  pdm_master_led_pwm.c
src/master/sensor/: pdm_master_sensor.c  pdm_master_sensor_adc.c  pdm_master_sensor_i2c.c  pdm_master_sensor_priv.h  pdm_sensor.c  pdm_sensor_adc.c  pdm_sensor_i2c.c  pdm_sensor_priv.h
src/master/template/: pdm_master_template.c  pdm_master_template_priv.h  pdm_template.c  pdm_template_priv.h  template_driver_i2c.c  template_driver_spi.c
src/nvmem/: pdm_nvmem.c  pdm_nvmem_priv.h  pdm_nvmem_spi.c
src/sensor/: pdm_sensor.c  pdm_sensor_ap3216c.c  pdm_sensor_icm20608.c  pdm_sensor_priv.h
src/switch/: pdm_switch.c  pdm_switch_gpio.c  pdm_switch_priv.h
src/template/: pdm_driver_template.h  pdm_master_template.c  pdm_template_driver.h  pdm_template_master.c
src/template/drivers/: pdm_driver_template.h  pdm_driver_template_gpio.c  pdm_driver_template_i2c.c  pdm_driver_template_platform.c  pdm_driver_template_spi.c  pdm_template_i2c_driver.c  pdm_template_i3c_driver.c
test/: Makefile  pdm_switch_test.c  pdm_test.c  pdm_test.h  pdm_test_switch.c  test.c
test/src/: pdm_test.c
web/: index.html  mqtt_switch.c  websocket_server  websocket_server.c
